# Awesome-Machine-Learning-Models

./: Contributing.md  CustomerSegmentation.ipynb  LICENSE  README.md  customer_segmentation.ipynb
.github/: PULL_REQUEST_TEMPLATE.yml  pull_request_template.md
Advanced-House-Rent-Predicton/: House Rent Prediction.ipynb  app.py  df.pkl  pipe.pkl  readme.md  requirements.txt  test.csv
Breast_Cancer_EDA/: BreastCancer.ipynb  README.md
Chronic_Kidney_Disease_Analysis/: README.md
Customer Segmentation/: README.md
Data Science Jobs & Salaries EDA/: DS Jobs & Salaries.txt  Readme.md  data-science-jobs-visualization-ml .ipynb
Diabetes Classification/: README.md  diabetes_classification.ipynb
DiabetesPrediction/: README.md
Employee_Attrition_Analysis/: Classification.ipynb  README.md
Exploratory-Analysis-911-Calls/: 911_calls.ipynb  README.md
Exploratory_data_analysis_of_imdb_dataset_in_R/: README.md  edaproject.rmd  imdb.csv
Face_Detection/: README.md
Fashion_Mnist/: fashion-mnist-ann.ipynb
Handwritten Number Detection/: README.md  handwritten-number-detection.ipynb
IceCream_Anomaly_Detection/: README.md
Liver-Disease-Prediction/: README  main.py  p1_data_science_201554.py
MovieRecommendation/: README.md  RecommendationSystem.ipynb
Text_to_Speech_Converter/: README.md
kaggle-house-prices-master/: License  README.md  baseline-model.ipynb  feature-importance.txt  model.ipynb  pyproject.toml
kaggle-house-prices-master/data/: data_description.txt  submission_linear_regression.csv  submission_stacking.csv  submission_voting.csv  submission_xgb.csv
(+49 files in other folders)
